# utilityai

./: LICENSE  README.md  pyproject.toml  setup.py  setup1.py  test.py
assets/: 1.gif:Zone.Identifier  2.gif:Zone.Identifier  3.gif:Zone.Identifier  4.gif:Zone.Identifier  5.gif:Zone.Identifier  6.gif:Zone.Identifier  7.gif:Zone.Identifier  8.gif:Zone.Identifier  9.gif:Zone.Identifier
src/utilityai/: chat.py  code.py  core.py  model.py
tests/: test.py
utilityai/: chat.py  code.py  core.py  model.py  test.py
