[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utilityai"
description = "This package brings language model capabilities into the coding environment, providing a variety of functionalities."
authors = [
  { name="Navid Matin Moghaddam", email="navid.matinmo@gmail.com" },
]
version = "1.0.0"
dependencies = [
  "onnxruntime-genai>=0.2.0; sys_platform == 'win32'",
  "onnxruntime-genai>=0.2.0; sys_platform == 'linux'",
  "onnxruntime-genai>=0.3.0rc1; sys_platform not in ('win32', 'linux')",
  "numpy>=1.21.2",
  "huggingface_hub>=0.13.0",
]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/navid-matinmo/utilityai"
Issues = "https://github.com/navid-matinmo/utilityai/issues"





